fixed about us no wraps

--- a/src/components/mainPage/navBarStyle.css
+++ b/src/components/mainPage/navBarStyle.css
@@ -4,12 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-
-
-/* Link {
-  color: black;
-} */
+.button {
+  flex-wrap: nowrap;
+}
 
 /* .container {
   width: 90%;
